Image Combination Complete. Astrometry Underway

--- a/reduction_part4_student.ipynb
+++ b/reduction_part4_student.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#this specifies the reduction directory\n",
     "#****\n",
     "#put your own path\n",
-    "redpath = \"/Users/grudnick/Work/Teaching/Classes/Astro_596/Fall_2019/Observing_project/Data/Reduced/20191104/\""
+    "redpath = \"/home/e731s866/RFSLAB/USER_DPT/e731s866/Data/Reduced/20191105/\""
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,14 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#*********\n",
     "#Here you will need to provide names of lists of your images, and the name of an output file \n",
     "#for each combined image\n",
-    "im_combine('ngc7296_v_comblist','ngc7276_V_comb.fits')"
+    "im_combine('NGC7128_V_comblist','NGC7128_V_comb.fits')\n",
+    "im_combine('NGC7128_B_comblist','NGC7128_B_comb.fits')\n",
+    "\n",
+    "im_combine('KING20_V_comblist','KING20_V_comb.fits')\n",
+    "im_combine('KING20_B_comblist','KING20_B_comb.fits')"
    ]
   },
   {
@@ -230,7 +234,11 @@
     "#******\n",
     "#This reads in images into variables that we will use.  You will need to do this for\n",
     "#every image that you combined\n",
-    "img_ngc7296_V, imgfile_ngc7296_V = readimage('ngc7276_V_comb.fits')"
+    "img_NGC7128_V, imgfile_NGC7128_V = readimage('NGC7128_V_comb.fits')\n",
+    "img_NGC7128_B, imgfile_NGC7128_B = readimage('NGC7128_B_comb.fits')\n",
+    "\n",
+    "img_KING20_V, imgfile_KING20_V = readimage('KING20_V_comb.fits')\n",
+    "img_KING20_B, imgfile_KING20_B = readimage('KING20_B_comb.fits')"
    ]
   },
   {
