--- a/reduction_part2_student.ipynb
+++ b/reduction_part2_student.ipynb
@@ -306,7 +306,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4>Your answer goes here:</h4>"
+    "<h4>Your answer goes here:</h4>\n",
+    "The master flat is the combination of the individual falfield images. A good masterflat when apllied to an individiaul image should return an image with a constant value and very little variation.\n"
    ]
   },
   {
